# skeleton

./: .gitignore  ReadMe.md  cgal2curves.py  cgal2graph.py
resources/: CGAL 5.1 - Manual- Getting Started with CGAL.webloc  CGAL 5.1 - Manual- Using CGAL on Unix (Linux, macOS, ...).webloc
skeleton/: CMakeLists.txt  skeleton.cpp
